prod-install/gke/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trow-svc
spec:
  selector:
    app: trow
  type: NodePort
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8000
    nodePort: 31000
